--- a/css/main.css
+++ b/css/main.css
@@ -115,9 +115,55 @@
   animation-direction: alternate;
 }
 
+#intro .step_away .wrapper img:nth-child(1) {
+  animation-name: appearImage;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
+#intro .step_away .wrapper img:nth-child(2) {
+  animation-name: appearImage;
+  animation-duration: 6s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  animation-direction: alternate-reverse;
+  animation-iteration-count: infinite;
+}
+
+#intro .clients .sum__wrapper .card:nth-child(odd) {
+  animation-name: wigglingCards;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+  animation-direction: alternate-reverse;
+  animation-iteration-count: infinite;
+}
+
+#intro .clients .sum__wrapper .card:nth-child(even) {
+  animation-name: wigglingCards;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-fill-mode: backwards;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+}
+
 @keyframes logoUpAndDowns {
   to {
     transform: translateY(40px);
+  }
+}
+@keyframes appearImage {
+  to {
+    transform: scale(0);
+  }
+}
+@keyframes wigglingCards {
+  to {
+    transform: rotate(5deg);
   }
 }
 header .nav__list--item a::after {
@@ -148,7 +194,7 @@ header .nav__list--item a::after {
   color: #FFFFFF;
 }
 
-footer .container .left p, .last_circle .left p, .discover .wrapper .right p {
+.last_circle .left p, .discover .wrapper .right p, footer .wrapper .left p {
   font-weight: 500;
   font-size: 22px;
   line-height: 35.2px;
@@ -588,6 +634,59 @@ header .nav__btn {
   align-items: center;
   gap: 13px;
 }
+footer .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 200px;
+}
+footer .wrapper .left {
+  width: 40%;
+}
+footer .wrapper .left p {
+  padding: 28px 0 16px;
+}
+footer .wrapper .left button {
+  padding: 10px 18px;
+  border-radius: transprent;
+  background: #8C72FF;
+  color: #fff;
+  transition: all 0.3s ease;
+  border-radius: 100px;
+  padding: 13px 8px;
+}
+footer .wrapper .left button:hover {
+  background: transprent;
+}
+footer .wrapper .left button:hover a {
+  color: #8C72FF;
+}
+footer .wrapper .right {
+  width: 60%;
+}
+footer .wrapper .right table {
+  color: #fff;
+  text-align: left;
+}
+footer .wrapper .right table tr th, footer .wrapper .right table tr td {
+  padding: 10px 15px;
+}
+
+.footer_foot {
+  margin-top: 80px;
+  border-top: 0.7px solid #D8D8D8;
+  padding: 24px 76px;
+  display: flex !important;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+}
+.footer_foot .socials {
+  display: flex;
+  align-items: center;
+  gap: 13px;
+}
+
 #intro {
   padding: 154px 0 54px;
 }
@@ -761,7 +860,7 @@ header .nav__btn {
 }
 
 .last_circle {
-  padding: 500px 0;
+  padding: 200px 0 300px;
 }
 .last_circle .left h3 {
   max-width: 563px;
@@ -794,42 +893,4 @@ header .nav__btn {
 .last_circle .right img:nth-child(5) {
   top: 69px;
   right: 318px;
-}
-
-footer .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 200px;
-}
-footer .container .left {
-  width: 40%;
-}
-footer .container .left p {
-  padding: 28px 0 16px;
-}
-footer .container .left button {
-  padding: 10px 18px;
-  border-radius: transprent;
-  background: #8C72FF;
-  color: #fff;
-  transition: all 0.3s ease;
-  border-radius: 100px;
-  padding: 13px 8px;
-}
-footer .container .left button:hover {
-  background: transprent;
-}
-footer .container .left button:hover a {
-  color: #8C72FF;
-}
-footer .container .right {
-  width: 60%;
-}
-footer .container .right table {
-  color: #fff;
-  text-align: left;
-}
-footer .container .right table tr th, footer .container .right table tr td {
-  padding: 10px 15px;
 }/*# sourceMappingURL=main.css.map */
